# cppPractice

./: 0613refactoring.txt  CMakeLists.txt  README.md  gui.cpp  gui.h  how to build.txt  imgui.ini  main.cpp
INPUT_FILE_HERE/: tag.txt  tag_sample.txt
OUTPUT_HERE/: tag.txt
build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SDtrainDataPreprocessor.sln  SDtrainDataPreprocessor.vcxproj  SDtrainDataPreprocessor.vcxproj.filters  UpgradeLog.htm  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.ini
build-vs/Release/: imgui.ini
build-vs/SDtrainDataPreprocessor.dir/Release/: SDtrainDataPreprocessor.exe.recipe
build-vs/source/glfw-master/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
build-vs/source/glfw-master/docs/: Doxyfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  docs.vcxproj  docs.vcxproj.filters
build-vs/source/glfw-master/docs/html/: build_8md.html  compat_8md.html  compat_guide.html  compile_8md.html  dir_c10453f9b9927ba35922dc8b4c7ce506.html  glfw3_8h.html  group__buttons.html  group__hat__state.html  group__input.html  (+18 more)
build-vs/source/glfw-master/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
build-vs/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
dummy/: backup.cpp  gotong.txt  ui.c
(+3 files in other folders)
